--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     width: 100%;
     overflow-x: hidden;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
   
 canvas
@@ -14,7 +14,7 @@ canvas
     height: 100%;
     position: fixed;
     z-index: -1;
-    background-color: #3e5c76;
+    background-color: #fff;
 }
 
 #particles-js 
@@ -40,7 +40,7 @@ canvas
 .inner-links
 {
     all: unset;
-    color: #0d1321;
+    color: #004953;
 }
 
 .inner-links:hover
@@ -88,20 +88,20 @@ canvas
 .education h1,
 .education-info h2
 {
-    color: #0d1321;
+    color: #004953;
 }
 
 .position,
 .education-info h3
 {
-    color: #1d2d44;
+    color: #86bbd8;
 }
 
 .about-me,
 .project-info p,
 .education-info p
 {
-    color: #f0ebd8;
+    color: #33658a;
 }
 
 .languages
@@ -188,7 +188,7 @@ canvas
 .project-info a
 {
     all: unset;
-    color: #1d2d44;
+    color: #86bbd8;
 }
 
 .project-info a:hover
@@ -223,6 +223,7 @@ canvas
 {
     display: flex;
     flex-direction: column;
+    justify-content: first baseline;
     width: 50%;
 }
 
@@ -241,13 +242,13 @@ canvas
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
-    color: #0d1321;
+    color: #004953;
 }
 
 .links-and-info a
 {
     all: unset;
-    color: #0d1321;
+    color: #004953;
 }
 
 .links-and-info a:hover
@@ -270,75 +271,28 @@ canvas
     animation: typewriter3;
 }
 
-.position1,
-.position2,
-.position3
+.position1
 {
     overflow: hidden;
-    white-space: nowrap;
-    display: inline-block;
-    position: relative;
-    animation-duration: 10s;
-    animation-timing-function: steps(25, end);
-    animation-iteration-count: infinite;
 }
 
-.position1::after,
-.position2::after,
-.position3::after
+.position1:before
 {
-    content: "|";
-    position: absolute;
-    right: 0;
-    animation: caret infinite;
-    animation-duration: 1s;
-    animation-timing-function: steps(1, end);
+    content: "";
+    position: relative;
+    height: 1.2em;
+    border-left: 2px solid #4070f4;
+    animation: typewriter1 4s steps(12) infinite;
 }
 
 @keyframes typewriter1
 {
-    0%, 33%, 66%, 100%
-    {
-        width: 0;
-    }
-    10%, 25%
-    {
-        width: 12em;
-    }
-}
-
-@keyframes typewriter2
-{
-    0%, 33%, 66%, 100%
-    {
-        width: 0;
-    }
     40%, 60%
     {
-        width: 8em;
+        left: 100%;
     }
-}
-
-@keyframes typewriter3
-{
-    0%, 33%, 66%, 100%
-    {
-        width: 0;
-    }
-    70%, 90%
-    {
-        width: 7em;
-    }
-}
-
-@keyframes caret
-{
     0%, 100%
     {
-        opacity: 0;
-    }
-    50%
-    {
-        opacity: 1;
+        left: 0%;
     }
 }
