--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -41,6 +41,7 @@ canvas
 {
     all: unset;
     color: #004953;
+    font-size: 2.5vh;
 }
 
 .inner-links:hover
@@ -89,6 +90,29 @@ canvas
 .education-info h2
 {
     color: #004953;
+}
+
+h1
+{
+    font-size: 10vh;
+    font-weight: bolder;
+}
+
+h2
+{
+    font-size: 5vh;
+    font-weight: bold;
+}
+
+h3
+{
+    font-size: 3vh;
+    font-weight: bold;
+}
+
+p
+{
+    font-size: 2.5vh;
 }
 
 .position,
@@ -189,6 +213,7 @@ canvas
 {
     all: unset;
     color: #86bbd8;
+    font-size: 2.5vh;
 }
 
 .project-info a:hover
@@ -249,6 +274,7 @@ canvas
 {
     all: unset;
     color: #004953;
+    font-size: 2.5vh;
 }
 
 .links-and-info a:hover
