--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -20,21 +20,26 @@ canvas
 #particles-js 
 {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.main-body
+{
+    padding: 3vh;
 }
 
 .header
 {
-    padding: 3vh;
     display: flex;
-    max-width: 100vh;
     justify-content: space-around;
     flex-direction: row;
+    width: 100vh;
     flex-wrap: wrap;
+    padding: 2vh;
     align-items: center;
-    gap: auto;
-    position: relative;
+    gap: 2px;
 }
 
 .inner-links
@@ -56,13 +61,12 @@ canvas
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    padding: 3vh;
     position: relative;
 }
 
 .my-img
 {
-    min-width: 250px;
+    min-width: 50vh;
 }
 
 .my-img img,
@@ -80,7 +84,12 @@ canvas
     flex-direction: column;
     justify-content: space-around;
     align-items: baseline;
-    max-width: 90vh;
+    max-width: 75vh;
+}
+
+.about-me
+{
+    max-width: 50vh;
 }
 
 .intro,
@@ -94,7 +103,7 @@ canvas
 
 h1
 {
-    font-size: 10vh;
+    font-size: 7vh;
     font-weight: bolder;
 }
 
@@ -175,7 +184,7 @@ p
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    width: 50%;
+    max-width: 50vh;
     min-width: 250px;
 }
 
