--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -6,23 +6,35 @@ body {
     width: 100%;
     overflow-x: hidden;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #28231d;
 }
-  
+
+#particle-js
+{
+    height: 100vh;
+}
+
 canvas
+{
+    position: fixed;
+    z-index: -1;
+}
+
+.main-body 
 {
     width: 100%;
     height: 100%;
-    position: fixed;
-    z-index: -1;
-    background-color: #fff;
-}
-
-#particles-js 
-{
-    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: #28231d;
+    background-size: cover;
+    background-position: 50% 50%;
+}
+
+.particles-js-canvas-el
+{
+    z-index: -1;
 }
 
 .main-body
@@ -35,7 +47,6 @@ canvas
     display: flex;
     justify-content: space-around;
     flex-direction: row;
-    width: 100vh;
     flex-wrap: wrap;
     padding: 2vh;
     align-items: center;
@@ -60,8 +71,6 @@ canvas
     flex-direction: row-reverse;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
-    position: relative;
 }
 
 .my-img
@@ -272,18 +281,18 @@ p
 {
     padding-left: 2vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
-    flex-wrap: wrap;
     align-items: center;
     color: #004953;
 }
 
-.links-and-info a
+.links-and-info a,
+.links-and-info p
 {
     all: unset;
     color: #004953;
-    font-size: 2.5vh;
+    gap: 1vh;
 }
 
 .links-and-info a:hover
